Bug 65695 - Export as JPEG missing something
Summary: Export as JPEG missing something
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4.2.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0 target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-13 03:55 UTC by caleb
Modified: 2016-10-25 19:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description caleb 2013-06-13 03:55:55 UTC
Situation:

I have some cheap Panasonic Plasma TVs that are used to display JPEGs off a USB stick. But whenever I "Export..." to a JPEG from Impress (or Draw) the JPEGs aren't recognised by the TVs. 

I used some Office Powerpoint presentations (pptx) to export some slides as JPEGs from Powerpoint and they work correctly on the TVs. But when I export the same slides from the same presentations in Impress they don't work on the TVs. 

So, I compared the JPEGs on this website - http://regex.info/exif.cgi - and found that the JFIF Resolution information was missing from the ones exported from Impress (and Draw) - the Powerpoint exports have "96pixels/inch" the Impress exports have "1pixel/none". 

I don't really know much about this or even if this is what is causing the Impress exports to not display on the TV. But any help would be great.

(I have tried exporting other documents from Impress and Draw and have had the same result - the JPEGs not being recognised by the TVs. And all of the JPEGs exported from Impress display correctly on a computer - it's just these stupid cheap TVs.)

Caleb
Comment 1 Rob Snelders 2013-10-05 10:50:20 UTC
The information isn't filled correctly. So setting the issue to new.

Confirmed it with LO 4.1.1.2 on Ubuntu 13.04 x86_64. So a platform independent issue
Comment 2 QA Administrators 2015-04-19 03:20:30 UTC Comment hidden (obsolete)
Comment 3 caleb 2015-04-19 23:53:17 UTC
The issue is still present as originally described in the latest version.

Caleb
Comment 4 Commit Notification 2015-04-20 11:19:18 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d0d8e0a2a7244814f783f16c6c8b342fe6d16e79

tdf#65695 write density 96 DPI to JPEG files at compression

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Tomaz Vajngerl 2015-04-20 11:22:09 UTC
I have changed the compress method to always write 96 DPI as density - Please try with the LO 5 daily build (when available with this change) if it fixes the issue.
Comment 6 MM 2015-10-17 22:16:48 UTC
(In reply to Tomaz Vajngerl from comment #5)
> I have changed the compress method to always write 96 DPI as density -
> Please try with the LO 5 daily build (when available with this change) if it
> fixes the issue.

There's only one problem with your patch. Now DPI is *always* 96 no matter what you set it to. This makes the resolution option useless. Would be better to take the DPI from the options, 96 is default anyway.
Comment 7 Chris Sherlock 2016-02-13 07:34:04 UTC
Asking for a review on Gerrit:

https://gerrit.libreoffice.org/22339
Comment 8 Chris Sherlock 2016-02-14 21:29:47 UTC
Chris Sherlock committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f8355221ae62b89a706f2d04b63eda658f3ccfa5

tdf#85761 vcl: JPEG export does not save PPI values correctly

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.