tdf#65695 write density 96 DPI to JPEG files at compression

Change-Id: I14f5e9abe63954141f1711115f884db68282d94c